add layout examples

--- a/uliweb-apps-example1-template/apps/settings.ini
+++ b/uliweb-apps-example1-template/apps/settings.ini
@@ -6,4 +6,19 @@ DEBUG_TEMPLATE = False
 INSTALLED_APPS = [
     'uliweb_apps.site',
     'uliweb_apps.login',
+    'example',
 ]
+
+[MENUS]
+MAINMENU = {
+    'subs':[
+        {'name': 'home', 'link':'/', 'title':u'Home'},
+        {'name': 'layout0', 'link':'/layout0', 'title':u'Layout0'},
+        {'name': 'layout1', 'link':'/layout1', 'title':u'Layout1'},
+        {'name': 'layout2', 'link':'/layout2', 'title':u'Layout2'},
+        {'name': '1column', 'link':'/1column', 'title':u'1column'},
+        {'name': '1column_fluid', 'link':'/1column_fluid', 'title':u'1column_fluid'},
+        {'name': '2column_sidebar', 'link':'/2column_sidebar', 'title':u'2column_sidebar'},
+        {'name': 'full_column', 'link':'/full_column', 'title':u'full_column'},
+    ]
+}
